syntax = "proto3";

package thepack;

option go_package = "/";
option java_package = "com.example.launcher";

service PackageService {
    rpc GetPackageNames (PackageRequest) returns (PackageResponse);
}

message PackageRequest {
    string userRole = 1;
}

message PackageResponse {
    repeated string packagesNames = 1;
}
